--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
     "bootstrap": "^5.3.6",
     "framer-motion": "^12.11.3",
     "js-priority-queue": "^0.1.5",
+    "prismjs": "^1.30.0",
     "react": "^19.1.0",
-    "react-d3-tree": "^3.6.6",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax": "^3.5.2",
     "react-router-dom": "^7.6.0",
     "react-scroll": "^1.9.3",
-    "react-split": "^2.0.14",
     "react-syntax-highlighter": "^15.6.1",
+    "refractor": "^5.0.0",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
@@ -40,4 +40,3 @@
     "vite": "^6.3.5"
   }
 }
-
